--- a/package.json
+++ b/package.json
@@ -74,7 +74,7 @@
 			"yarn lint"
 		]
 	},
-	"homepage": "https://gatsby-starter-leaflet.netlify.app/",
+	"homepage": "https://github.com/maxnvdm/MapCovid/",
 	"repository": {
 		"type": "git",
 		"url": "https://github.com/maxnvdm/MapCovid"
